RTI-3356 QA fixes (#14202)
* Fix TC2

* Fix legacy scrollbar background

--- a/packages/ag-grid-community/src/theming/core/css/_header.css
+++ b/packages/ag-grid-community/src/theming/core/css/_header.css
@@ -253,8 +253,8 @@
 
 /* COLUMN SEPARATOR */
 
-.ag-header-cell:where(:not(.ag-column-last))::after,
-.ag-header-group-cell:where(:not(.ag-column-last))::after {
+.ag-header-cell::after,
+.ag-header-group-cell::after {
     content: '';
     position: absolute;
 
@@ -264,6 +264,13 @@
     top: calc(50% - var(--ag-header-column-border-height) * 0.5);
     border-right: var(--ag-header-column-border);
     right: 0;
+}
+
+:where(.ag-body-horizontal-content-no-gap) {
+    .ag-header-cell:where(.ag-column-last)::after,
+    .ag-header-group-cell:where(.ag-column-last)::after {
+        border-right-color: transparent;
+    }
 }
 
 /* DRAG-DROP HIGHLIGHT */
